@@ -28,7 +28,7 @@ do_show() {
 	local datarootdir=@datarootdir@
 	local scriptdir=${ROOT}@datadir@/@PACKAGE@
 
-	local dbdir="${ROOT}$(load_config \"${scriptdir}/common/config.sh\" dbdir)"
+	local dbdir="${ROOT}$(load_config \"${scriptdir}/common/config.bash\" DBDIR)"
 	local mode=all
 	mode=${mode:-${1}}
 
@@ -137,8 +137,7 @@ do_update() {
 	local datarootdir=@datarootdir@
 	local scriptdir=${ROOT}@datadir@/@PACKAGE@
 
-	dbdir="${ROOT}$(load_config \"${scriptdir}/common/config.sh\" dbdir)"
-	datadir="${ROOT}$(load_config \"${scriptdir}/common/config.sh\" datadir)"
+	dbdir="${ROOT}$(load_config \"${scriptdir}/common/config.bash\" DBDIR)"
 
 	# Parse our commandline args
 	while [[ ${1#--} != ${1} ]] ; do
@@ -168,14 +167,14 @@ do_update() {
 		echo "Removing users:"
 		for i in ${deadusers} ; do
 			echo -n "  ${i} : "
-			"${scriptdir}/deluser.sh" ${i} ${ROOT} \
+			"${scriptdir}/deluser.bash" ${i} ${ROOT} \
 				&& echo "done" || die -q "failed"
 		done
 
 		echo "Removing groups:"
 		for i in ${deadgroups} ; do
 			echo -n "  ${i} : "
-			"${scriptdir}/delgroup.sh" ${i} ${ROOT} \
+			"${scriptdir}/delgroup.bash" ${i} ${ROOT} \
 				&& echo "done" || die -q "failed"
 		done
 	else
