@@ -1,5 +1,10 @@
 2006-07-31  Mike Kelly  <pioto@pioto.org>
 
+	* eselect/users.eselect.in: Fix some load_config lines, remove an
+	unnecessary one.
+
+2006-07-31  Mike Kelly  <pioto@pioto.org>
+
 	* -API, doc/API.txt, doc/Makefile: RST-ize the API specifications.
 	Provide a Makefile for them.
 
